--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -129,6 +129,8 @@ body {
   margin-right: 20px;
 }
 
+/* Checkbox input */
+
 .webcheck {
   border: 5px solid var(--primary);
   height: 200px;
@@ -143,8 +145,9 @@ body {
   align-items: center;
   justify-content: center;
   background-color: var(--contrast);
-  margin-bottom: 100px;
+  margin-bottom: 50px;
 }
+
 
 input[type="checkbox"] {
   -webkit-appearance: none;
@@ -155,7 +158,7 @@ input[type="checkbox"] {
   cursor: pointer;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   border-radius: 3px;
 }
 
@@ -183,6 +186,50 @@ input[type="checkbox"]:checked {
 
 input[type="checkbox"]:checked:after {
   display: block;
+}
+
+/* Timer interactive */
+
+#time {
+  height: 300px;
+  display: block;
+  text-align: center;
+}
+
+#time h1 {
+  font-size: 100px;
+}
+
+.updown .fan {
+  color: var(--primary);
+  font-size: 40px;
+  padding: 10px 45px;
+}
+
+#time .btn {
+  margin: 0 25px;
+}
+
+.sub {
+  text-align: center;
+  height: 200px;
+}
+
+.sub h3 {
+  font-size: 30px;
+}
+
+.sub p {
+  font-size: 15px;
+  padding: 10px 5px 30px;
+
+}
+
+
+input[type="text"] {
+  box-sizing: border-box;
+  padding: 10px 15px;
+  border: 3px solid var(--primary);
 }
 
 /* Footer */
