--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -106,7 +106,7 @@ body {
   width: 70%;
 }
 
-.textblock h2 {
+.textblock h2, h2 span {
   text-align: center;
   padding-top: 120px;
   padding-bottom: 40px;
@@ -123,6 +123,10 @@ body {
   text-align: left;
   align-items: center;
   line-height: 1.8;
+}
+
+.textblock a {
+  text-decoration: none;
 }
 
 
@@ -207,7 +211,7 @@ body {
 }
 
 
-input[type="checkbox"] {
+.webcheck input[type="checkbox"] {
   -webkit-appearance: none;
   appearance: none;
   width: 70px;
@@ -220,12 +224,12 @@ input[type="checkbox"] {
   border-radius: 3px;
 }
 
-label {
+.webcheck label {
   font-size: 80px;
   padding-left: 30px;
 }
 
-input[type="checkbox"]::after {
+.webcheck input[type="checkbox"]::after {
   font-family: "Font Awesome 5 Free";
   font-weight: 1000;
   font-size: 40px;
@@ -234,15 +238,15 @@ input[type="checkbox"]::after {
   display: none;
 }
 
-input[type="checkbox"]:hover {
+.webcheck input[type="checkbox"]:hover {
   background-color: #a5a5a5;
 }
 
-input[type="checkbox"]:checked {
+.webcheck input[type="checkbox"]:checked {
   background-color: var(--primary);
 }
 
-input[type="checkbox"]:checked:after {
+.webcheck input[type="checkbox"]:checked:after {
   display: block;
 }
 
@@ -324,7 +328,74 @@ input[type="text"] {
   cursor: pointer;
 }
 
+.textblock form {
+  background: var(--contrast);
+  padding: 50px 30px;
+  width: 100%;
+}
 
+.textblock form .half {
+  display: flex;
+  justify-content: space-between;
+}
+
+.textblock form .half .item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 35px;
+  width: 48%;
+}
+
+.textblock form label {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 10px;
+  font-weight: 600;
+  color: var(--primary);
+}
+
+.textblock form .half .item input {
+  width: 100%;
+  outline: 0;
+  border: 3px solid var(--primary);
+  padding: 15px;
+  height: 50px;
+}
+
+.textblock form .full {
+  margin-bottom: 25px;
+}
+
+.textblock form .full textarea {
+  background: var(--contrast);
+  border: 3px solid var(--primary);
+  outline: none;
+  width: 100%;
+  height: 150px;
+  padding: 20px;
+  font-size: 16px;
+}
+
+.textblock form .action input {
+  background: var(--primary);
+  color: var(--contrast);
+  padding: 15px 20px;
+  border: none;
+  cursor: pointer;
+  margin-right: 15px;
+  border: 2px solid var(--primary);
+}
+
+.textblock form .action input:hover {
+  background: var(--contrast);
+  color: var(--primary);
+  border: 2px solid var(--primary);
+}
+
+.full .fam, .item .fam {
+  font-size: 20px;
+  margin-right: 5px;
+}
 
 
 
