--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -22,57 +22,140 @@
 
 /* Navigation */
 
-nav {
-  top: 0;
+.header {
+  position: relative;
   width: 100%;
-  position: fixed;
-  background-color: var(--primary);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: var(--primary);
+  padding: 0 25px;
+}
+
+.logo a {
   color: var(--contrast);
-  z-index: 10;
+  display: block;
+  width: 100%;
 }
 
-nav li, nav a {
-  display: inline-block;
-  font-size: 18px;
+.inspan {
+  font-weight: 700;
 }
 
-nav .fas {
-  margin-right: 9px;
-}
-
-nav ul {
-  float: right;
-}
-
-nav li {
-  padding: 15px 10px;
-}
-
-nav h2 {
-  float: left;
+.logo a, .logo .inspan {
   font-size: 40px;
+  text-decoration: none;
   padding-left: 0px;
 }
 
-nav a {
-  text-decoration: none;
+.navigation {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  z-index: 1;
+}
+
+.menu li {
+  list-style: none;
+}
+
+.menu li a {
   color: var(--contrast);
-  padding: 25px 20px;
+  text-decoration: none;
+  display: block;
+  padding: 40px 35px;
+  font-size: 20px;
+  line-height: 1;
 }
 
-nav li a:hover {
+.menu li a:hover {
   color: var(--primary);
   background: var(--contrast);
   border-radius: 5px;
   padding: 10px;
-  transition-duration: 400ms;
+  transition-duration: 500ms;
 }
 
-.select {
+.hamburger {
+  position: relative;
+  width: 30px;
+  height: 4px;
+  background: var(--contrast);
+  z-index: 2;
+  cursor: pointer;
+  border-radius: 10px;
+  transition: 0.2s;
+}
+
+.hamburger:before, .hamburger:after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  right: 0;
+  background: var(--contrast);
+  border-radius: 10px;
+  transition: 0.2s;
+}
+
+.hamburger:before {
+  top: -10px;
+  width: 30px;
+}
+
+.hamburger:after {
+  top: 10px;
+  width: 30px;
+}
+
+.toggle-menu {
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  z-index: 3;
+  cursor: pointer;
+  opacity: 0;
+}
+
+.hamburger, .toggle-menu {
+  display: none;
+}
+
+.navigation input:checked ~ .hamburger {
+  background: transparent;
+}
+
+.navigation input:checked ~ .hamburger:before {
+  top: 0;
+  transform: rotate(-45deg);
+  width: 30px;
+}
+
+.navigation input:checked ~ .hamburger:after {
+  top: 0;
+  transform: rotate(45deg);
+  width: 30px;
+}
+
+.navigation input:checked ~ .menu {
+  right: 0;
+}
+
+.menu .select {
   color: var(--primary);
   background: var(--contrast);
   border-radius: 5px;
   padding: 10px;
+}
+
+.navigation .fas {
+  margin-right: 9px;
 }
 
 /* For span tags */
@@ -418,7 +501,7 @@ footer {
 
 .main-content {
   display: flex;
-  margin-left: 25px;
+  margin: 0 25px;
 }
 
 .main-content .box {
@@ -577,4 +660,48 @@ footer {
   .textblock form .action input{
     margin-bottom: 15px;
   }
+
+  footer {
+    position: relative;
+    bottom: 0;
+  }
+
+  .main-content {
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .main-content .box {
+    margin: 5px 0;
+  }
+
+  .hamburger, .toggle-menu {
+    display: block;
+  }
+
+  .header {
+    padding: 25px;
+  }
+
+  .menu {
+    justify-content: start;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    background: var(--primary);
+    width: 300px;
+    height: 100%;
+    padding-top: 65px;
+  }
+
+  .menu li {
+    width: 100%;
+  }
+
+  .menu li a  {
+    padding: 30px;
+  }
+
 }
