--- a/STUDYspace website/Tests/test.css
+++ b/STUDYspace website/Tests/test.css
@@ -9,179 +9,57 @@
 }
 
 * {
-  margin: 0;
   padding: 0;
   font-size: 17px;
   box-sizing: border-box;
   font-weight: 500;
 }
 
+body {
+  background-color: var(--back);
+}
 
-.header {
-  position: relative;
+.accordian {
+  width: 750px;
+  margin: 0, auto;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.accordian-header {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  padding: 25px 20px;
   background: var(--primary);
-  padding: 0 25px;
-}
-
-.logo a {
-  color: var(--contrast);
-  display: block;
-  width: 100%;
-}
-
-.inspan {
-  font-weight: 700;
-}
-
-.logo a, .inspan {
-  font-size: 40px;
-  text-decoration: none;
-  padding-left: 0px;
-}
-
-.navigation {
+  border: none;
+  border-bottom: 1px solid var(--contrast);
+  outline: none;
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-
-.menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  z-index: 1;
-}
-
-.menu li {
-  list-style: none;
-}
-
-.menu li a {
   color: var(--contrast);
-  text-decoration: none;
-  display: block;
-  padding: 40px 35px;
-  font-size: 20px;
-  line-height: 1;
-}
-
-.menu li a:hover {
-  color: var(--primary);
-  background: var(--contrast);
-  border-radius: 5px;
-  padding: 10px;
-  transition-duration: 500ms;
-}
-
-.hamburger {
-  position: relative;
-  width: 30px;
-  height: 4px;
-  background: var(--contrast);
-  z-index: 2;
   cursor: pointer;
-  border-radius: 10px;
-  transition: 0.2s;
 }
 
-.hamburger:before, .hamburger:after {
-  content: "";
-  position: absolute;
-  height: 4px;
-  right: 0;
+.accordian-body {
+  background-color: var(--contrast);
+  padding: 0 30px;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+}
+
+.accordian-body.active {
+  padding: 16px;
+  max-height: 160px;
+}
+
+.accordian-header.active {
   background: var(--contrast);
-  border-radius: 10px;
-  transition: 0.2s;
+  border: 1px solid var(--primary);
+  color: #000;
 }
 
-.hamburger:before {
-  top: -10px;
-  width: 30px;
-}
-
-.hamburger:after {
-  top: 10px;
-  width: 30px;
-}
-
-.toggle-menu {
-  position: absolute;
-  width: 30px;
-  height: 100%;
-  z-index: 3;
-  cursor: pointer;
-  opacity: 0;
-}
-
-.hamburger, .toggle-menu {
-  display: none;
-}
-
-.navigation input:checked ~ .hamburger {
-  background: transparent;
-}
-
-.navigation input:checked ~ .hamburger:before {
-  top: 0;
-  transform: rotate(-45deg);
-  width: 30px;
-}
-
-.navigation input:checked ~ .hamburger:after {
-  top: 0;
-  transform: rotate(45deg);
-  width: 30px;
-}
-
-.navigation input:checked ~ .menu {
-  right: 0;
-}
-
-.select {
+.accordian-header.active i {
+  transform: rotate(180deg);
   color: var(--primary);
-  background: var(--contrast);
-  border-radius: 5px;
-  padding: 10px;
-}
-
-.navigation .fas {
-  margin-right: 9px;
-}
-
-
-
-@media screen and (max-width: 1200px) {
-  .hamburger, .toggle-menu {
-    display: block;
-  }
-
-  .header {
-    padding: 25px;
-  }
-
-  .menu {
-    justify-content: start;
-    flex-direction: column;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    right: -300px;
-    background: var(--primary);
-    width: 300px;
-    height: 100%;
-    padding-top: 65px;
-  }
-
-  .menu li {
-    width: 100%;
-  }
-
-  .menu li a  {
-    padding: 30px;
-  }
+  transition: all 0.3s ease-in-out;
 }
