--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -283,6 +283,7 @@ body {
   border: 5px solid var(--primary);
   position: relative;
   line-height: 30px;
+  border-radius: 10px;
 }
 
 .newsbox a {
@@ -345,6 +346,7 @@ body {
   justify-content: center;
   background-color: var(--contrast);
   margin-bottom: 50px;
+  border-radius: 10px;
 }
 
 
@@ -439,20 +441,24 @@ input[type="text"] {
   width: 100%;
   margin: 0, auto;
   overflow: hidden;
-  border-radius: 5px;
 }
 
 .accordian-header {
   width: 100%;
   padding: 25px 20px;
-  background: var(--primary);
+  background: var(--contrast);
   border: none;
-  border-bottom: 1px solid var(--contrast);
+  border-left: 3px solid var(--primary);
+  border-right: 3px solid var(--primary);
   outline: none;
   display: flex;
   justify-content: space-between;
-  color: var(--contrast);
   cursor: pointer;
+  border-radius: 10px;
+}
+
+.accordian-header i {
+  color: var(--primary);
 }
 
 .accordian-body {
@@ -463,23 +469,24 @@ input[type="text"] {
   max-height: 0;
   overflow: hidden;
   transition: all 0.3s ease-in-out;
+  border-radius: 10px;
 }
 
 .accordian-body.active {
   padding: 30px;
   max-height: 500px;
+  border: 2px solid var(--primary);
 }
 
 .accordian-header.active {
-  background: var(--contrast);
-  border: 4px solid var(--primary);
-  color: #000;
+  background: var(--primary);
+  color: var(--contrast);
 }
 
 .accordian-header.active i {
   transform: rotate(180deg);
-  color: var(--primary);
   transition: all 0.3s ease-in-out;
+  color: var(--contrast);
 }
 
 
@@ -488,6 +495,7 @@ input[type="text"] {
   background: var(--contrast);
   padding: 50px 30px;
   width: 100%;
+  border-radius: 10px;
 }
 
 .textblock form .half {
@@ -516,6 +524,7 @@ input[type="text"] {
   border: 3px solid var(--primary);
   padding: 15px;
   height: 50px;
+  border-radius: 10px;
 }
 
 .textblock form .full {
@@ -524,6 +533,7 @@ input[type="text"] {
 
 .textblock form .full textarea {
   background: var(--contrast);
+  border-radius: 10px;
   border: 3px solid var(--primary);
   outline: none;
   width: 100%;
@@ -535,6 +545,7 @@ input[type="text"] {
 .textblock form .action input {
   background: var(--primary);
   color: var(--contrast);
+  border-radius: 10px;
   padding: 15px 20px;
   border: none;
   cursor: pointer;
