--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -490,81 +490,6 @@ input[type="text"] {
 }
 
 
-/* Contact form */
-.textblock form {
-  background: var(--contrast);
-  padding: 50px 30px;
-  width: 100%;
-  border-radius: 10px;
-}
-
-.textblock form .half {
-  display: flex;
-  justify-content: space-between;
-}
-
-.textblock form .half .item {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 35px;
-  width: 48%;
-}
-
-.textblock form label {
-  display: block;
-  font-size: 20px;
-  margin-bottom: 10px;
-  font-weight: 600;
-  color: var(--primary);
-}
-
-.textblock form .half .item input {
-  width: 100%;
-  outline: 0;
-  border: 3px solid var(--primary);
-  padding: 15px;
-  height: 50px;
-  border-radius: 10px;
-}
-
-.textblock form .full {
-  margin-bottom: 25px;
-}
-
-.textblock form .full textarea {
-  background: var(--contrast);
-  border-radius: 10px;
-  border: 3px solid var(--primary);
-  outline: none;
-  width: 100%;
-  height: 150px;
-  padding: 20px;
-  font-size: 16px;
-}
-
-.textblock form .action input {
-  background: var(--primary);
-  color: var(--contrast);
-  border-radius: 10px;
-  padding: 15px 20px;
-  border: none;
-  cursor: pointer;
-  margin-right: 15px;
-  border: 2px solid var(--primary);
-}
-
-.textblock form .action input:hover {
-  background: var(--contrast);
-  color: var(--primary);
-  border: 2px solid var(--primary);
-}
-
-.full .fam, .item .fam {
-  font-size: 20px;
-  margin-right: 5px;
-}
-
-
 
 /* Footer */
 
@@ -597,7 +522,7 @@ footer {
 }
 
 .left .content .social {
-  margin: 20px 0 0 0;
+  margin: 30px 0 0 0;
 }
 
 .left .content p {
@@ -645,11 +570,15 @@ footer {
   font-size: 16px;
   font-weight: 500;
   padding-left: 5px;
-  line-height: 45px;
+  line-height: 55px;
 }
 
 .right form {
   margin-top: 10px;
+}
+
+.right form .msg {
+  margin-top: 20px;
 }
 
 .right form input, .right form textarea {
@@ -660,12 +589,18 @@ footer {
   color: var(--contrast);
 }
 
-.right form input::placeholder {
+.right form input::placeholder, .right form textarea::placeholder {
   color: var(--contrast);
 }
 
 .right form input {
   height: 50px;
+}
+
+.right form textarea {
+  height: 80px;
+  padding: 8px;
+  font-size: 15px;
 }
 
 .right form input:focus, .right form textarea:focus {
