--- a/STUDYspace website/main.css
+++ b/STUDYspace website/main.css
@@ -395,42 +395,28 @@ body {
   height: 300px;
   display: block;
   text-align: center;
-}
-
-#time h1 {
-  font-size: 100px;
-}
-
-.updown .fan {
-  color: var(--primary);
-  font-size: 40px;
-  padding: 10px 45px;
-}
-
-#time .btn {
   margin: 0 25px;
 }
 
-.sub {
+#time h1 {
+  margin-top: 40px;
+  font-size: 100px;
+}
+
+
+#time .settime input {
+  width: 75px;
+  height: 50px;
   text-align: center;
-  height: 200px;
-}
-
-.sub h3 {
-  font-size: 30px;
-}
-
-.sub p {
-  font-size: 15px;
-  padding: 10px 5px 30px;
-
-}
-
-
-input[type="text"] {
-  box-sizing: border-box;
-  padding: 10px 15px;
+  border-radius: 5px;
+  outline: none;
+  padding: 10px;
   border: 3px solid var(--primary);
+}
+
+#time .btn {
+  margin: 10px 0;
+  width: 15%;
 }
 
 
@@ -751,6 +737,10 @@ footer {
 
   #time {
     height: 275px;
+  }
+
+  #time .btn {
+    width: 47%;
   }
 
   .question .faq {
